# vim_decrypt

./: README.rst  pyproject.toml  test_vimdecrypt.py  vimdecrypt.py
